objects/Customer__c.object
<CustomObject>
    <description>Force.com Handbook Dev401.
The Customer object stores the customer information. It also stores the total fine paid by the customer as a roll up field.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <description>US SS Number :
Three single digits (0-9):\\d{3}
• A dash
• Two single digits (0-9):\\d{2}
• A dash
• Four single digits (0-9):\\d{4}</description>
        <externalId>true</externalId>
        <label>Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Customer UID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Social_Security_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK(Social_Security_Number__c),
REGEX( Social_Security_Number__c ,
&quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)
))</errorConditionFormula>
        <errorDisplayField>Social_Security_Number__c</errorDisplayField>
        <errorMessage>SSN must be in this format: 999-99-9999.</errorMessage>
    </validationRules>
</CustomObject>